[package]
name = "sui-bridge"
version = "0.1.0"
authors = ["Mysten Labs <build@mystenlabs.com>"]
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ethers = "2.0"
tokio = { workspace = true, features = ["full"] }
sui-types.workspace = true
serde.workspace = true
axum.workspace = true
anyhow.workspace = true
reqwest.workspace = true
fastcrypto.workspace = true
tap.workspace = true